--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -14,18 +14,18 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="100dp"
+        android:layout_margin="15dp"
+        android:layout_height="100dp">
 
         <TextView
             android:id="@+id/item_category_name_tv"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/colorAccent"
+            android:layout_height="100dp"
             android:gravity="center"
             android:text="@{viewModel.categoryName}"
-            android:textColor="@color/color_black"
-            android:textSize="28sp"
+            android:textColor="@color/color_white"
+            android:textSize="26sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="默认" />
