--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -10,7 +10,7 @@
         android:id="@+id/card_status_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.card.CardFragment">
+        tools:context=".ui.fragment.news.CardFragment">
 
         <TextView
             android:layout_width="match_parent"
