--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -173,7 +173,9 @@
                 android:text="@={viewModel.webUrl}"
                 app:layout_constraintTop_toBottomOf="@id/edit_link_hint_tv"
                 tools:ignore="MissingConstraints"
-                tools:text="http://www.baidu.com" />
+                android:layout_marginEnd="2dp"
+                app:layout_constraintRight_toLeftOf="@+id/edit_copy_link_tv"
+                tools:text="http://www.baidu.comasddddddddddddddddddddddddddddddddddddddddddddddddddddddasdddddddddddddddddddddddddddddddddddd" />
 
             <TextView
                 android:id="@+id/edit_copy_link_tv"
