--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -90,7 +90,9 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
+                    android:ellipsize="end"
                     android:hint="名称"
+                    android:maxLines="1"
                     android:text="@{viewModel.name}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +105,9 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="15dp"
+                    android:ellipsize="end"
                     android:hint="账号"
+                    android:maxLines="1"
                     android:text="@{viewModel.account}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -116,8 +120,10 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="80dp"
+                    android:ellipsize="end"
                     android:hint="密码"
                     android:inputType="textPassword"
+                    android:maxLines="1"
                     android:text="@{viewModel.password}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +147,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="15dp"
                     android:hint="链接"
+
                     android:text="@{viewModel.webUrl}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
