--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,9 @@
         <item name="android:textColor">@color/color_black</item>
         <item name="android:layout_marginStart">15dp</item>
         <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxWidth">250dp</item>
         <item name="android:textSize">16sp</item>
     </style>
 
