--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,4 +55,19 @@
         <item name="android:textColor">#a9b7b7</item>
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="SettingTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">28dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginTop">45dp</item>
+        <item name="android:paddingStart">5dp</item>
+        <item name="android:paddingEnd">5dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="MineTextView" parent="SettingTextView">
+        <item name="android:layout_height">25.5dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginTop">45dp</item>
+    </style>
 </resources>
