--- a/app/src/main/res/layout/layout_common_title_bar.xml
+++ b/app/src/main/res/layout/layout_common_title_bar.xml
@@ -11,7 +11,7 @@
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@color/color_white"
         android:gravity="center_vertical">
 
         <ImageView
