--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,28 +64,18 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/login_password_et" />
 
-
-        <TextView
-            android:id="@+id/login_register_tv"
+        <Button
+            android:id="@+id/login_register_bt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shape_register_btn_bg"
             android:text="@string/login_register"
-            android:textColor="@color/color_black"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/login_view" />
-
-        <View
-            android:id="@+id/login_view"
-            android:layout_width="1dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="30dp"
-            android:background="@color/color_black"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/color_white"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/login_login_bt" />
+
 
         <TextView
             android:id="@+id/login_fingerprint_tv"
@@ -97,6 +87,7 @@
             android:textColor="#000000"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/login_view" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
