--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 <!--TODO-->
-    <style name="FullTheme" parent="AppTheme">
+    <style name="FullTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowNoTitle">true</item>
     </style>
