--- a/app/src/main/res/layout/dialog_edit_password.xml
+++ b/app/src/main/res/layout/dialog_edit_password.xml
@@ -32,10 +32,10 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:inputType="textPassword"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:hint="请输入旧密码"
-            android:textColorHint="@color/color_black"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/hint_tv" />
 
@@ -45,9 +45,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
+            android:inputType="textPassword"
             android:layout_marginEnd="15dp"
             android:hint="请输入新密码"
-            android:textColorHint="@color/color_black"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/old_password_et" />
 
@@ -56,10 +56,10 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:inputType="textPassword"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:hint="请再次输入新密码"
-            android:textColorHint="@color/color_black"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_password_et" />
 
