--- a/app/src/main/res/layout/item_category_item.xml
+++ b/app/src/main/res/layout/item_category_item.xml
@@ -12,28 +12,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:background="@color/color_white"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/item_category_item_name"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center"
+            android:textColor="@color/color_white"
+            android:textSize="25sp"
             android:text="@={viewModel.name}"
-            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="微博" />
+            tools:text="na" />
 
         <TextView
             android:id="@+id/item_category_item_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="@dimen/dp_4"
             android:text="@={viewModel.account}"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/item_category_item_remark"
@@ -45,7 +48,7 @@
             android:id="@+id/item_category_item_remark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
             android:text="@={viewModel.remark}"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
